Add start button on index

--- a/q1.html
+++ b/q1.html
@@ -24,19 +24,24 @@
                     <h2>ME MYSELF</h2>
                     <div class="nav-stacked">
                         <dl>
-                            <dd><a href="q1.html">How I wish my week looked</a></dd>
-                            <dd><a href="q2.html">My short term dreams and goals: next 12 months</a></dd>
-                            <dd><a href="#">My long term dreams and goals: the future</a></dd>
-                            <dd><a href="#">My ultimate bucket list</a></dd>
+                            <dd><a href="q1.html">Question1</a></dd>
+                            <dd><a href="q2.html">Question2</a></dd>
+                            <dd><a href="#">Question3</a></dd>
+                            <dd><a href="#">Question4</a></dd>
+                            <dd><a href="#">Question5</a></dd>
+                            <dd><a href="#">Question6</a></dd>
+                            <dd><a href="#">Question7</a></dd>
+                            <dd><a href="#">Question8</a></dd>
+                            <dd><a href="#">Question9</a></dd>
                         </dl>
                     </div>
                     <h2>DREAM & GOAL</h2>
                     <div class="nav-stacked">
                         <dl>
-                            <dd><a href="#">How I wish my week looked</a></dd>
-                            <dd><a href="#">My short term dreams and goals: next 12 months</a></dd>
-                            <dd><a href="#">My long term dreams and goals: the future</a></dd>
-                            <dd><a href="#">My ultimate bucket list</a></dd>
+                            <dd><a href="#">Question10</a></dd>
+                            <dd><a href="#">Question11</a></dd>
+                            <dd><a href="#">Question12</a></dd>
+                            <dd><a href="#">Question13</a></dd>
                         </dl>
                     </div>
                 </div>
