--- a/index.html
+++ b/index.html
@@ -18,111 +18,113 @@
     <div class="container-fluid">
         <div class="row clearfix wrap">
             <div class="content">
-            <div class="col-xs-6 col-md-2 column nav-bar" id="left-column">
-                <div class="top-area"><img src="img/logo-index.gif" alt="logo"/></div>
+                <div class="col-xs-6 col-md-2 column nav-bar" id="left-column">
+                    <div class="top-area"><a href="index.html"><img src="img/logo-index.gif" alt="logo"/></a></div>
+                        <div id="accordion">
+                            <h2>ME MYSELF</h2>
+                            <div class="nav-stacked">
+                                <dl>
+                                    <dd><a href="q1.html">Question1</a></dd>
+                                    <dd><a href="q2.html">Question2</a></dd>
+                                    <dd><a href="#">Question3</a></dd>
+                                    <dd><a href="#">Question4</a></dd>
+                                    <dd><a href="#">Question5</a></dd>
+                                    <dd><a href="#">Question6</a></dd>
+                                    <dd><a href="#">Question7</a></dd>
+                                    <dd><a href="#">Question8</a></dd>
+                                    <dd><a href="#">Question9</a></dd>
+                                </dl>
+                            </div>
+                            <h2>DREAM & GOAL</h2>
+                            <div class="nav-stacked">
+                                <dl>
+                                    <dd><a href="#">Question10</a></dd>
+                                    <dd><a href="#">Question11</a></dd>
+                                    <dd><a href="#">Question12</a></dd>
+                                    <dd><a href="#">Question13</a></dd>
+                                </dl>
+                            </div>
+                        </div>
+                </div>
 
-                    <div id="accordion">
-                        <h2>ME MYSELF</h2>
-                        <div class="nav-stacked">
-                            <dl>
-                                <dd><a href="q1.html">How I wish my week looked</a></dd>
-                                <dd><a href="q2.html">My short term dreams and goals: next 12 months</a></dd>
-                                <dd><a href="#">My long term dreams and goals: the future</a></dd>
-                                <dd><a href="#">My ultimate bucket list</a></dd>
-                            </dl>
-                        </div>
-                        <h2>DREAM & GOAL</h2>
-                        <div class="nav-stacked">
-                            <dl>
-                                <dd><a href="#">How I wish my week looked</a></dd>
-                                <dd><a href="#">My short term dreams and goals: next 12 months</a></dd>
-                                <dd><a href="#">My long term dreams and goals: the future</a></dd>
-                                <dd><a href="#">My ultimate bucket list</a></dd>
-                            </dl>
-                        </div>
-                    </div>
-            </div>
-            <div class="col-xs-6 col-md-10 column" style="padding: 0;">
+                <div class="col-xs-6 col-md-10 column" style="padding: 0;">
                     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                                <img src="img/image1.gif" alt="Carousel image1">
-                                <div class="carousel-caption">
-                                    <h1>Welcome to Mapping My World</h1>
-                                    <h3>My Journey, My way</h3>
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img src="img/image1.gif" alt="Carousel image1">
+                                    <div class="carousel-caption">
+                                        <h1>Welcome to Mapping My World</h1>
+                                        <h3>My Journey, My way</h3>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <img src="img/image2.gif" alt="Carousel image2">
+                                    <div class="carousel-caption">
+                                        <h3>What is this booklet for?</h3>
+                                        <p>This booklet has been designed to put you at the centre of
+                                            decisions about your life in the NDIS planning process.</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <img src="img/image3.gif" alt="Carousel image3">
+                                    <div class="carousel-caption">
+                                        <h3>What is this booklet for?</h3>
+                                        <p>This booklet has been designed to put you at the centre of
+                                            decisions about your life in the NDIS planning process.</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="item">
-                                <img src="img/image2.gif" alt="Carousel image2">
-                                <div class="carousel-caption">
-                                    <h3>What is this booklet for?</h3>
-                                    <p>This booklet has been designed to put you at the centre of
-                                        decisions about your life in the NDIS planning process.</p>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <img src="img/image3.gif" alt="Carousel image3">
-                                <div class="carousel-caption">
-                                    <h3>What is this booklet for?</h3>
-                                    <p>This booklet has been designed to put you at the centre of
-                                        decisions about your life in the NDIS planning process.</p>
-                                </div>
+                            <!-- Controls -->
+                            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    <div class="panel panel-primary">
+                        <h1>HELLO, My Name Is</h1>
+                        <div class="form-group">
+                            <input class="form-control input-lg" type="text" placeholder="My Name Is...">
+                        </div>
+                        <h1>Email</h1>
+                        <div class="form-group">
+                            <input class="form-control input-lg" type="text" id="email" placeholder="Email Address">
+                            <div class="email-dropdown">
+                                <ul class="list"></ul>
                             </div>
                         </div>
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
-
-
-                <div class="panel panel-primary">
-                    <h1>HELLO, My Name Is</h1>
-                    <div class="form-group">
-                        <input class="form-control input-lg" type="text" placeholder="My Name Is...">
-                    </div>
-                    <h1>Email</h1>
-                    <div class="form-group">
-                        <input class="form-control input-lg" type="text" id="email" placeholder="Email Address">
-                        <div class="email-dropdown">
-                            <ul class="list"></ul>
-                        </div>
-                    </div>
-                </div>
-
+                    <button type="button" class="btn btn-default btn-lg" onclick="window.location.href='q1.html'">
+                        <span class="glyphicon glyphicon-circle-arrow-up" aria-hidden="true"></span>
+                    </button>
                 </div>
             </div>
+            <div class="row clearfix col-xs-12 column footer" id="footer">
+                <address>
+                    <strong>Contact Us</strong>
+                    <abbr title="Phone">P:</abbr> 1800 112 112
+                    <br>
+                    This booklet has been designed to put you at the centre of
+                    decisions about your life in the NDIS planning process.
+                    <br>
+                    It helps you prepare for your NDIS planning meeting.
+                    It is designed to help you think about how you’d like to live
+                    your life – now and in the future.<br>
+                </address>
             </div>
         </div>
-
-    <div class="row clearfix footer" id="footer">
-        <address>
-            <strong>Contact Us</strong>
-            <abbr title="Phone">P:</abbr> 1800 112 112
-            <br>
-            This booklet has been designed to put you at the centre of
-            decisions about your life in the NDIS planning process.
-            <br>
-            It helps you prepare for your NDIS planning meeting.
-            It is designed to help you think about how you’d like to live
-            your life – now and in the future.<br>
-
-        </address>
     </div>
-
 </body>
 <script type="text/javascript" src="js/email.js"></script>
 </html>
