--- a/q12.html
+++ b/q12.html
@@ -48,26 +48,13 @@
             </div>
         </div>
         <div class="col-xs-6 col-md-10 column">
-            <h1>The ways I communicate and make decisions</h1>
+            <h1>My long term dreams and goals<span style="color: #888888">:next future</span>
+                <small><br><em>Think about: daily living, home, relationships, health & wellbeing, lifelong learning,
+                    work, social & community and choice & control.</em></small></h1>
             <div class="row clearfix" style="margin-top: 5%">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I want to be involved:</h3>
-                    <textarea class="form-control" ></textarea>
-                </div>
-
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>I want whose help:</h3>
-                    <textarea class="form-control" placeholder="Who I want to help me in my NDIS planning meeting"></textarea>
-                </div>
-            </div>
-            <div class="row clearfix">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I communicate:</h3>
-                    <textarea class="form-control" placeholder="What my NDIS representative needs to know about how I communicate"></textarea>
-                </div>
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who makes the final decisions?</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                <div class="col-md-12 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What would you like to achieve in the next five years?</h3>
+                    <textarea class="form-control" placeholder="" style="height: 300px"></textarea>
                 </div>
             </div>
         </div>
