--- a/q4.html
+++ b/q4.html
@@ -48,25 +48,29 @@
             </div>
         </div>
         <div class="col-xs-6 col-md-10 column">
-            <h1>The ways I communicate and make decisions</h1>
+            <h1>My Home</h1>
             <div class="row clearfix" style="margin-top: 5%">
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I want to be involved:</h3>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What type of home I live in?</h3>
                     <textarea class="form-control" ></textarea>
                 </div>
 
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>I want whose help:</h3>
-                    <textarea class="form-control" placeholder="Who I want to help me in my NDIS planning meeting"></textarea>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>The people I usually live with:</h3>
+                    <textarea class="form-control" placeholder=""></textarea>
                 </div>
             </div>
             <div class="row clearfix">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I communicate:</h3>
-                    <textarea class="form-control" placeholder="What my NDIS representative needs to know about how I communicate"></textarea>
+                <div class="col-md-4 column form-group p4-label">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who helps me at home</h3>
+                    <textarea class="form-control" placeholder=""></textarea>
                 </div>
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who makes the final decisions?</h3>
+                <div class="col-md-4 column form-group p4-label">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What do they help me with?</h3>
+                    <textarea class="form-control" placeholder=""></textarea>
+                </div>
+                <div class="col-md-4 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Do I use any equipment or other things to help me at home?</h3>
                     <textarea class="form-control" placeholder=""></textarea>
                 </div>
             </div>
