--- a/q7.html
+++ b/q7.html
@@ -48,26 +48,26 @@
             </div>
         </div>
         <div class="col-xs-6 col-md-10 column">
-            <h1>The ways I communicate and make decisions</h1>
+            <h1>My health and wellbeing</h1>
             <div class="row clearfix" style="margin-top: 5%">
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I want to be involved:</h3>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>[Example: I’ve got high blood pressure and diabetes]</h3>
                     <textarea class="form-control" ></textarea>
                 </div>
 
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>I want whose help:</h3>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>[Example: Keeping fit and healthy]</h3>
                     <textarea class="form-control" placeholder="Who I want to help me in my NDIS planning meeting"></textarea>
                 </div>
             </div>
             <div class="row clearfix">
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I communicate:</h3>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>[Example: I eat a balanced diet]</h3>
                     <textarea class="form-control" placeholder="What my NDIS representative needs to know about how I communicate"></textarea>
                 </div>
                 <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who makes the final decisions?</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>What is not working well with my health</h3>
+                    <textarea class="form-control" placeholder="[Example: I抎 like to reduce my weight by joining an exercise class. I need to find a suitable class and someone to take me.]"></textarea>
                 </div>
             </div>
         </div>
