--- a/q13.html
+++ b/q13.html
@@ -30,7 +30,6 @@
                         <dd><a href="q3.html">Question3</a></dd>
                         <dd><a href="q4.html">Question4</a></dd>
                         <dd><a href="q5.html">Question5</a></dd>
-                        <dd><a href="q6.html">Question6</a></dd>
                         <dd><a href="q7.html">Question7</a></dd>
                         <dd><a href="q8.html">Question8</a></dd>
                         <dd><a href="q9.html">Question9</a></dd>
@@ -48,26 +47,11 @@
             </div>
         </div>
         <div class="col-xs-6 col-md-10 column">
-            <h1>The ways I communicate and make decisions</h1>
+            <h1>My Ultimate Bucket List</h1>
             <div class="row clearfix" style="margin-top: 5%">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I want to be involved:</h3>
-                    <textarea class="form-control" ></textarea>
-                </div>
-
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>I want whose help:</h3>
-                    <textarea class="form-control" placeholder="Who I want to help me in my NDIS planning meeting"></textarea>
-                </div>
-            </div>
-            <div class="row clearfix">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I communicate:</h3>
-                    <textarea class="form-control" placeholder="What my NDIS representative needs to know about how I communicate"></textarea>
-                </div>
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who makes the final decisions?</h3>
-                    <textarea class="form-control" placeholder=""></textarea>
+                <div class="col-md-12 column form-group">
+                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>If you had one ultimate wish, what would it be?</h3>
+                    <textarea class="form-control" placeholder="Example: An overseas trip? To participate in a marathon? Go on a hot air balloon? To get married?" style="height: 300px"></textarea>
                 </div>
             </div>
         </div>
