--- a/q3.html
+++ b/q3.html
@@ -8,12 +8,11 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/jquery-ui.min.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
-    <link href="css/general-question.css" rel="stylesheet">
+    <link href="css/q3.css" rel="stylesheet">
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/load-pages.js"></script>
-    <script type="text/javascript" src="js/cookie.js"></script>
     <title>Map My World</title>
 </head>
 <body>
@@ -48,26 +47,40 @@
             </div>
         </div>
         <div class="col-xs-6 col-md-10 column">
-            <h1>The ways I communicate and make decisions</h1>
-            <div class="row clearfix" style="margin-top: 5%">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I want to be involved:</h3>
-                    <textarea class="form-control" ></textarea>
-                </div>
-
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>I want whose help:</h3>
-                    <textarea class="form-control" placeholder="Who I want to help me in my NDIS planning meeting"></textarea>
+            <h1>Important people to me
+                <small><br><em>Who are the important people in your life? Write them into the chart below</em></small></h1>
+            <div class="row clearfix">
+                <div class="col-md-12 column form-group">
+                    <h4>My Family</h4>
+                    <textarea class="form-control center-block" placeholder=""></textarea>
+                    <h4>Very Close to</h4>
+                    <textarea class="form-control center-block" placeholder=""></textarea>
                 </div>
             </div>
             <div class="row clearfix">
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>How I communicate:</h3>
-                    <textarea class="form-control" placeholder="What my NDIS representative needs to know about how I communicate"></textarea>
+                <div class="col-md-3 column form-group">
+                    <h4>Word/School</h4>
+                    <textarea class="form-control"></textarea>
                 </div>
-                <div class="col-md-6 column form-group">
-                    <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span>Who makes the final decisions?</h3>
+                <div class="col-md-3 column form-group">
+                    <h4>Very Close to</h4>
                     <textarea class="form-control" placeholder=""></textarea>
+                </div>
+                <div class="col-md-3 column form-group">
+                    <h4>Very Close to</h4>
+                    <textarea class="form-control"></textarea>
+                </div>
+                <div class="col-md-3 column form-group">
+                    <h4>Home & any paid supportors</h4>
+                    <textarea class="form-control" placeholder=""></textarea>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-md-12 column form-group">
+                    <h4>Very close to</h4>
+                    <textarea class="form-control center-block" placeholder=""></textarea>
+                    <h4>Friends and other important people</h4>
+                    <textarea class="form-control center-block" placeholder=""></textarea>
                 </div>
             </div>
         </div>
